fix: integração front e back